z-index fix

--- a/_sac_styles.css
+++ b/_sac_styles.css
@@ -58,7 +58,7 @@ body {
 	background: white;
 }
 
-#header {position:relative; z-index:100;}
+#header {position:relative; z-index:1000;}
 #header .tread {
 	position: absolute;
 	z-index: 1;
@@ -249,9 +249,9 @@ PRODUCT PAGE STYLES
 .prodImageContainer iframe {border:none; padding: 0px; margin:0px;}
 .prodViewerContainer .prodThumbs a.prodThumb {border: 1px solid #dcdcdc; float:right; margin:0px;}
 .prodImageContainer .icon img{vertical-align:middle;}
-#ytModal .ytContainer{position:fixed; left:50%; top: 50%; z-index: 1001; background: #CC4300;}
+#ytModal .ytContainer{position:fixed; left:50%; top: 50%; z-index: 1003; background: #CC4300;}
 #ytModal .ytContainer iframe{width:99%; height: 99%; margin-left:.5%; margin-top: .5%}
-#ytModal button{position:absolute; top:-12px; right: -12px; width: 24px; height:24px; z-index:1002;}
+#ytModal button{position:absolute; top:-12px; right: -12px; width: 24px; height:24px; z-index:1004;}
 #ytModal .overlay {
 	position:fixed;
 	top:0px;
@@ -260,7 +260,7 @@ PRODUCT PAGE STYLES
 	right:0px;
 	background:#AAAAAA;
 	opacity:.3;
-	z-index:1000;
+	z-index:1002;
 }
 /*********************************************************
 
